--- a/accountService/accountService/src/main/resources/application.properties
+++ b/accountService/accountService/src/main/resources/application.properties
@@ -1,22 +1,26 @@
 spring.application.name=accountService
-spring.cloud.config.enabled=false
-spring.datasource.url=jdbc:h2:mem:account-db
-spring.h2.console.enabled=true
+server.port=8082
+
+#spring.cloud.config.enabled=false
+#spring.datasource.url=jdbc:h2:mem:account-db
+#spring.h2.console.enabled=true
 #spring.cloud.discovery.enabled=false
 # niveau global
-logging.level.root=INFO
+#logging.level.root=INFO
 # ton code (ex. package)
-logging.level.com.example.ms=DEBUG
+#logging.level.com.example.ms=DEBUG
 # libs bruyantes
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=DEBUG
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
-server.port=8082
-eureka.client.enabled=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
+
+#eureka.client.enabled=true
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Publier l'IP au lieu du hostname
-eureka.instance.prefer-ip-address=true
+#eureka.instance.prefer-ip-address=true
+
+spring.config.import=optional:configserver:http://localhost:9999
