--- a/configService/configService/src/main/resources/application.properties
+++ b/configService/configService/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=configService
-server.port=8888
-
+server.port=9999
+spring.cloud.config.server.git.uri=https://github.com/slassi90/microServices.git
