--- a/customerService/customerService/src/main/resources/application.properties
+++ b/customerService/customerService/src/main/resources/application.properties
@@ -1,23 +1,24 @@
 spring.application.name=customerService
-spring.cloud.config.enabled=false
-spring.datasource.url=jdbc:h2:mem:customer-db
+#spring.cloud.config.enabled=false
+#spring.datasource.url=jdbc:h2:mem:customer-db
 server.port=8081
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #spring.cloud.discovery.enabled=false
 # niveau global
-logging.level.root=INFO
+#logging.level.root=INFO
 # ton code (ex. package)
-logging.level.com.example.ms=DEBUG
+#logging.level.com.example.ms=DEBUG
 # libs bruyantes
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=DEBUG
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
-eureka.client.enabled=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
+#eureka.client.enabled=true
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Publier l'IP au lieu du hostname
-eureka.instance.prefer-ip-address=true
-management.endpoints.web.exposure.include=*
+#eureka.instance.prefer-ip-address=true
+#management.endpoints.web.exposure.include=*
+spring.config.import=optional:configserver:http://localhost:9999
