--- a/gatewayService/gatewayService/src/main/resources/app.yml
+++ b/gatewayService/gatewayService/src/main/resources/app.yml
@@ -1,48 +1,16 @@
-server:
-  port: 8888
-
 spring:
+  cloud:
+    gateway:
+      routes:
+        - id : r1
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/customers/**
+        - id : r2
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/accounts/**
   application:
     name: gateway-service
-  main:
-    web-application-type: reactive
-  cloud:
-    discovery:
-      enabled: true
-    gateway:
-      server:
-        webflux:
-          routes:
-            - id: customers
-              uri: http://localhost:8081
-              predicates:
-                - Path=/customers/**
-            - id: accounts
-              uri: http://localhost:8082
-              predicates:
-                - Path=/accounts/**
-
-eureka:
-  client:
-    enabled: true
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    registry-fetch-interval-seconds: 5
-  instance:
-    prefer-ip-address: true
-    hostname: localhost
-    instance-id: ${spring.application.name}:${server.port}
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: gateway
-
-logging:
-  level:
-    com.netflix.discovery: DEBUG
-    org.springframework.cloud.netflix.eureka: DEBUG
-    org.springframework.cloud.gateway: DEBUG
+server:
+  port: 8888
