--- a/gatewayService/gatewayService/src/main/resources/application.properties
+++ b/gatewayService/gatewayService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=gatewayService
-eureka.client.enabled=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.client.enabled=true
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 server.port=8888
 # Publier l'IP au lieu du hostname
-eureka.instance.prefer-ip-address=true
-
+#eureka.instance.prefer-ip-address=true
+spring.config.import=optional:configserver:http://localhost:9999
